{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 71,
  "lineage": "fe7b64d1-5289-85d7-c1d0-40687cef9787",
  "resources": [
    {
      "module": "module.temzy_eks_dev.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454617234462:security-group/sg-0d38f729a53ec0892",
            "description": "EKS cluster security group.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow cluster egress access to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d38f729a53ec0892",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow pods to communicate with the EKS cluster API.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f4b5bcf65d9e7907"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "us-east-1-temzy-cluster-dev20230509204815997600000001",
            "name_prefix": "us-east-1-temzy-cluster-dev",
            "owner_id": "454617234462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-east-1-temzy-cluster-dev-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "us-east-1-temzy-cluster-dev-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-036a62ac5b6714c9f"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.temzy_eks_dev.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454617234462:security-group/sg-0f4b5bcf65d9e7907",
            "description": "Security group for all nodes in the cluster.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow nodes all egress to the Internet.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4b5bcf65d9e7907",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow node to communicate with each other.",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d38f729a53ec0892"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow workers pods to receive communication from the cluster control plane.",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d38f729a53ec0892"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "us-east-1-temzy-cluster-dev20230509204816001400000003",
            "name_prefix": "us-east-1-temzy-cluster-dev",
            "owner_id": "454617234462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-east-1-temzy-cluster-dev-eks_worker_sg",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "owned"
            },
            "tags_all": {
              "Name": "us-east-1-temzy-cluster-dev-eks_worker_sg",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-036a62ac5b6714c9f"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.temzy_eks_dev.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-1593217278",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0d38f729a53ec0892",
            "security_group_rule_id": "sgr-0cd6224f97288bffe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.temzy_eks_dev.module.eks.aws_security_group.cluster"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.temzy_eks_dev.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-4105904809",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d38f729a53ec0892",
            "security_group_rule_id": "sgr-0fcbf993dbac6116a",
            "self": false,
            "source_security_group_id": "sg-0f4b5bcf65d9e7907",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.temzy_eks_dev.module.eks.aws_security_group.cluster",
            "module.temzy_eks_dev.module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.temzy_eks_dev.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2981758481",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f4b5bcf65d9e7907",
            "security_group_rule_id": "sgr-0ede78fb80a93553f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.temzy_eks_dev.module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.temzy_eks_dev.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-628168626",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f4b5bcf65d9e7907",
            "security_group_rule_id": "sgr-0951a97c678f66058",
            "self": false,
            "source_security_group_id": "sg-0d38f729a53ec0892",
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.temzy_eks_dev.module.eks.aws_security_group.cluster",
            "module.temzy_eks_dev.module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.temzy_eks_dev.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-1021431684",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f4b5bcf65d9e7907",
            "security_group_rule_id": "sgr-0225f8ec60dad4844",
            "self": false,
            "source_security_group_id": "sg-0d38f729a53ec0892",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.temzy_eks_dev.module.eks.aws_security_group.cluster",
            "module.temzy_eks_dev.module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.temzy_eks_dev.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-3112383004",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f4b5bcf65d9e7907",
            "security_group_rule_id": "sgr-00dedac1c38c0c388",
            "self": false,
            "source_security_group_id": "sg-0f4b5bcf65d9e7907",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.temzy_eks_dev.module.eks.aws_security_group.workers"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.temzy_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0074b58cc1897523c",
            "association_id": "eipassoc-0803a7bf4ad4f7236",
            "domain": "vpc",
            "id": "eipalloc-0074b58cc1897523c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02463eb9e10cf5ea5",
            "private_dns": "ip-172-16-102-168.ec2.internal",
            "private_ip": "172.16.102.168",
            "public_dns": "ec2-44-214-130-136.compute-1.amazonaws.com",
            "public_ip": "44.214.130.136",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c237297b8b59ffa",
            "association_id": "eipassoc-073c2d36e0e34a699",
            "domain": "vpc",
            "id": "eipalloc-06c237297b8b59ffa",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0188575ac027e5f71",
            "private_dns": "ip-172-16-149-229.ec2.internal",
            "private_ip": "172.16.149.229",
            "public_dns": "ec2-44-208-154-236.compute-1.amazonaws.com",
            "public_ip": "44.208.154.236",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.temzy_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454617234462:internet-gateway/igw-04eb8c6029083080a",
            "id": "igw-04eb8c6029083080a",
            "owner_id": "454617234462",
            "tags": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            },
            "vpc_id": "vpc-036a62ac5b6714c9f"
          },
          "dependencies": [
            "module.temzy_vpc.module.vpc.aws_vpc.this",
            "module.temzy_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.temzy_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0074b58cc1897523c",
            "association_id": "eipassoc-0803a7bf4ad4f7236",
            "connectivity_type": "public",
            "id": "nat-04e0496a1cf734aa4",
            "network_interface_id": "eni-02463eb9e10cf5ea5",
            "private_ip": "172.16.102.168",
            "public_ip": "44.214.130.136",
            "subnet_id": "subnet-087133bb43dab2a0b",
            "tags": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            }
          },
          "dependencies": [
            "module.temzy_vpc.module.vpc.aws_eip.nat",
            "module.temzy_vpc.module.vpc.aws_internet_gateway.this",
            "module.temzy_vpc.module.vpc.aws_subnet.public",
            "module.temzy_vpc.module.vpc.aws_vpc.this",
            "module.temzy_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c237297b8b59ffa",
            "association_id": "eipassoc-073c2d36e0e34a699",
            "connectivity_type": "public",
            "id": "nat-0f8245c96880957b3",
            "network_interface_id": "eni-0188575ac027e5f71",
            "private_ip": "172.16.149.229",
            "public_ip": "44.208.154.236",
            "subnet_id": "subnet-0f4d6a2b111330ea3",
            "tags": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            }
          },
          "dependencies": [
            "module.temzy_vpc.module.vpc.aws_eip.nat",
            "module.temzy_vpc.module.vpc.aws_internet_gateway.this",
            "module.temzy_vpc.module.vpc.aws_subnet.public",
            "module.temzy_vpc.module.vpc.aws_vpc.this",
            "module.temzy_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.temzy_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-051b2bea68d1ffffc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04e0496a1cf734aa4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-051b2bea68d1ffffc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.temzy_vpc.module.vpc.aws_eip.nat",
            "module.temzy_vpc.module.vpc.aws_internet_gateway.this",
            "module.temzy_vpc.module.vpc.aws_nat_gateway.this",
            "module.temzy_vpc.module.vpc.aws_route_table.private",
            "module.temzy_vpc.module.vpc.aws_subnet.public",
            "module.temzy_vpc.module.vpc.aws_vpc.this",
            "module.temzy_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ba6be0eaa0e909791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f8245c96880957b3",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ba6be0eaa0e90979",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.temzy_vpc.module.vpc.aws_eip.nat",
            "module.temzy_vpc.module.vpc.aws_internet_gateway.this",
            "module.temzy_vpc.module.vpc.aws_nat_gateway.this",
            "module.temzy_vpc.module.vpc.aws_route_table.private",
            "module.temzy_vpc.module.vpc.aws_subnet.public",
            "module.temzy_vpc.module.vpc.aws_vpc.this",
            "module.temzy_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.temzy_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04eb8c6029083080a",
            "id": "r-rtb-017663bd251bb41cb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-017663bd251bb41cb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.temzy_vpc.module.vpc.aws_internet_gateway.this",
            "module.temzy_vpc.module.vpc.aws_route_table.public",
            "module.temzy_vpc.module.vpc.aws_vpc.this",
            "module.temzy_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.temzy_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454617234462:route-table/rtb-051b2bea68d1ffffc",
            "id": "rtb-051b2bea68d1ffffc",
            "owner_id": "454617234462",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04e0496a1cf734aa4",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-private-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-private-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-036a62ac5b6714c9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.temzy_vpc.module.vpc.aws_vpc.this",
            "module.temzy_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454617234462:route-table/rtb-0ba6be0eaa0e90979",
            "id": "rtb-0ba6be0eaa0e90979",
            "owner_id": "454617234462",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f8245c96880957b3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-private-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-private-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-036a62ac5b6714c9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.temzy_vpc.module.vpc.aws_vpc.this",
            "module.temzy_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.temzy_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454617234462:route-table/rtb-017663bd251bb41cb",
            "id": "rtb-017663bd251bb41cb",
            "owner_id": "454617234462",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04eb8c6029083080a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-public",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-public",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-036a62ac5b6714c9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.temzy_vpc.module.vpc.aws_vpc.this",
            "module.temzy_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.temzy_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0ba96dd79eed474",
            "route_table_id": "rtb-051b2bea68d1ffffc",
            "subnet_id": "subnet-0a2c61b271cd3b556"
          },
          "dependencies": [
            "module.temzy_vpc.module.vpc.aws_route_table.private",
            "module.temzy_vpc.module.vpc.aws_subnet.private",
            "module.temzy_vpc.module.vpc.aws_vpc.this",
            "module.temzy_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a601b723a0bcfa4f",
            "route_table_id": "rtb-0ba6be0eaa0e90979",
            "subnet_id": "subnet-03f73661c2a25e945"
          },
          "dependencies": [
            "module.temzy_vpc.module.vpc.aws_route_table.private",
            "module.temzy_vpc.module.vpc.aws_subnet.private",
            "module.temzy_vpc.module.vpc.aws_vpc.this",
            "module.temzy_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.temzy_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025d57bc2a84f01b0",
            "route_table_id": "rtb-017663bd251bb41cb",
            "subnet_id": "subnet-087133bb43dab2a0b"
          },
          "dependencies": [
            "module.temzy_vpc.module.vpc.aws_route_table.public",
            "module.temzy_vpc.module.vpc.aws_subnet.public",
            "module.temzy_vpc.module.vpc.aws_vpc.this",
            "module.temzy_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081e647ad8a41ebd3",
            "route_table_id": "rtb-017663bd251bb41cb",
            "subnet_id": "subnet-0f4d6a2b111330ea3"
          },
          "dependencies": [
            "module.temzy_vpc.module.vpc.aws_route_table.public",
            "module.temzy_vpc.module.vpc.aws_subnet.public",
            "module.temzy_vpc.module.vpc.aws_vpc.this",
            "module.temzy_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.temzy_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454617234462:subnet/subnet-0a2c61b271cd3b556",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a2c61b271cd3b556",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "454617234462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-private-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-private-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-036a62ac5b6714c9f"
          },
          "dependencies": [
            "module.temzy_vpc.module.vpc.aws_vpc.this",
            "module.temzy_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454617234462:subnet/subnet-03f73661c2a25e945",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f73661c2a25e945",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "454617234462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-private-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-private-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-036a62ac5b6714c9f"
          },
          "dependencies": [
            "module.temzy_vpc.module.vpc.aws_vpc.this",
            "module.temzy_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.temzy_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454617234462:subnet/subnet-087133bb43dab2a0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087133bb43dab2a0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "454617234462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-public-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-public-us-east-1a",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-036a62ac5b6714c9f"
          },
          "dependencies": [
            "module.temzy_vpc.module.vpc.aws_vpc.this",
            "module.temzy_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454617234462:subnet/subnet-0f4d6a2b111330ea3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4d6a2b111330ea3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "454617234462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-public-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev-public-us-east-1b",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-036a62ac5b6714c9f"
          },
          "dependencies": [
            "module.temzy_vpc.module.vpc.aws_vpc.this",
            "module.temzy_vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.temzy_vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:454617234462:vpc/vpc-036a62ac5b6714c9f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0d8d9fc35d637a29b",
            "default_route_table_id": "rtb-08225880c8eea51e1",
            "default_security_group_id": "sg-0a408309946c49ffe",
            "dhcp_options_id": "dopt-0d49fb50c587463d3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-036a62ac5b6714c9f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08225880c8eea51e1",
            "owner_id": "454617234462",
            "tags": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "us-east-1-temzy-vpc-dev",
              "Terraform": "true",
              "kubernetes.io/cluster/us-east-1-temzy-cluster-dev": "shared"
            }
          }
        }
      ]
    }
  ]
}